--- a/src/content/docs/introduccion.mdx
+++ b/src/content/docs/introduccion.mdx
@@ -1,3 +1,8 @@
+---
+title: "Introducción"
+description: "Bienvenido a mi portafolio"
+---
+
 # Introducción
 
 Este proyecto es un portafolio personal que muestra mis habilidades y proyectos como Ingeniero de Sistemas.
